force-app/main/default/objects/Campaign/fields/Octopus_Automation_Status__c.field-meta.xml
<CustomField>
    <fullName>Octopus_Automation_Status__c</fullName>
    <label>Octopus Automation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>