force-app/main/default/objects/Campaign/fields/Octopus_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Octopus_Campaign_ID__c</fullName>
    <label>Octopus Campaign ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>