force-app/main/default/objects/Campaign/fields/Octopus_Last_Synced_Date__c.field-meta.xml
<CustomField>
    <fullName>Octopus_Last_Synced_Date__c</fullName>
    <label>Octopus Last Synced Date</label>
    <type>DateTime</type>
</CustomField>