force-app/main/default/objects/Campaign/fields/Octopus_Next_Sync_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Octopus_Next_Sync_End_Date__c</fullName>
    <label>Octopus Next Sync End Date</label>
    <type>Date</type>
</CustomField>