force-app/main/default/objects/Campaign/fields/Octopus_Next_Sync_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Octopus_Next_Sync_Start_Date__c</fullName>
    <label>Octopus Next Sync Start Date</label>
    <type>Date</type>
</CustomField>