force-app/main/default/objects/Campaign/fields/Octopus_Status__c.field-meta.xml
<CustomField>
    <fullName>Octopus_Status__c</fullName>
    <label>Octopus Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>